# web-research-mcp

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
prompts/agents/: deep-researcher.md  web-searcher.md
prompts/skills/: deep-research.md  web-search.md
src/: cli.ts
src/server/: index.ts
src/server/tools/: fetch.ts  search.ts
src/web_research_mcp/: __init__.py  __main__.py  server.py
src/web_research_mcp/tools/: __init__.py  fetch.py  search.py
src/web_research_mcp/utils/: __init__.py  content_utils.py  url_utils.py
templates/claude-code/: agent.yaml  mcp.json  skill.yaml
templates/opencode/: skill.yaml
tests/: __init__.py  test_fetch.py  test_search.py  test_server.py  test_setup.py
