[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-research-mcp"
version = "0.1.0"
description = "MCP server for deep web research — multi-query search, page fetching, and content extraction"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "NachoFLizaur" }
]
keywords = ["mcp", "web-research", "search", "deep-research", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "ddgs>=8.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/NachoFLizaur/web-research-mcp"
Repository = "https://github.com/NachoFLizaur/web-research-mcp"

[project.scripts]
web-research-mcp = "web_research_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/web_research_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (require network)",
]
